--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#3B3E43"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/book_poster"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:src="@mipmap/ic_launcher"/>
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:layout_marginLeft="8dp">
 
         <TextView
             android:id="@+id/book_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Android Phones For Dummies"
-            tools:textSize="18sp"
-            tools:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textColor="#ADB5C7"/>
 
         <TextView
             android:id="@+id/book_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Dan Gookin"
-            tools:textSize="20sp"
-            tools:textStyle="bold"/>
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:padding="4dp"/>
 
         <TextView
             android:id="@+id/book_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Then this is the book you need! Written in the typical fun and friendly For Dummies style, this full-color guide covers the basics of all the features of Android phones without weighing you down with heavy technical terms or jargon."
-            tools:maxLines="2"
-            tools:textSize="16sp"
-            tools:textStyle="bold"/>
+            android:textColor="#8598C4"
+            android:textSize="14sp"
+            android:maxLines="2" />
 
 
     </LinearLayout>
@@ -52,8 +53,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="2014"
-        tools:textSize="20sp"
-        tools:textStyle="bold"/>
+        android:textSize="12sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
 </LinearLayout>
