--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#232B3F"
+    android:background="@color/main_background"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -26,8 +26,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:hint="@string/search"
-            android:textColor="#ffffff"
-            android:textColorHint="#9FB9F6"
+            android:maxLines="1"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/hint_color"
             android:layout_weight="3"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"/>
@@ -42,92 +43,6 @@
 
     </LinearLayout>
 
-    <!--<android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="#fff"
-        android:elevation="3dp"
-        app:contentInsetEnd="0dp"
-        app:contentInsetLeft="0dp"
-        app:contentInsetRight="0dp"
-        app:contentInsetStart="0dp"
-        app:contentInsetStartWithNavigation="0dp"
-        app:titleTextColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0">
-
-        <EditText
-            android:id="@+id/editSearch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:hint="@string/search"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:padding="8dp" />
-
-        <ImageButton
-            android:id="@+id/button_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/ic_action_search"
-            android:layout_weight="0.75"
-            android:layout_margin="4dp" />
-
-    </android.support.v7.widget.Toolbar>-->
-
-
-    <!--<android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"/>
-
-            <EditText
-                android:id="@+id/book_search"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:hint="@string/search"
-                android:textColor="#ffffff"
-                android:textColorHint="#9FB9F6"
-                android:layout_weight="3"/>
-
-            <ImageButton
-                android:id="@+id/button_search"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:src="@drawable/ic_action_search"
-                android:layout_weight="0.75"
-                android:layout_margin="4dp"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.Toolbar>
--->
     <ListView
         android:id="@+id/books_list"
         android:layout_width="match_parent"
