--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_gray_color"
     android:orientation="horizontal"
-    android:background="#3B3E43"
     android:padding="8dp">
 
     <ImageView
@@ -13,49 +12,82 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerInside"
+        tools:src="@tools:sample/avatars" />
 
     <LinearLayout
+        android:id="@+id/tool_bar"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="3"
-        android:layout_marginLeft="8dp">
+        android:layout_marginBottom="-50dip"
+        android:layout_marginLeft="8dp"
+        android:layout_weight="3.5"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/book_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#ADB5C7"/>
-
-        <TextView
-            android:id="@+id/book_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:textColor="@color/main_background"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:padding="4dp"/>
+            tools:text="PHP and MySQL For Dummies" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/book_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"
+                tools:text="2009-11-10" />
+
+            <TextView
+                android:id="@+id/book_page_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"
+                android:paddingLeft="16dp"
+                tools:text="456p" />
+
+            <TextView
+                android:id="@+id/book_language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"
+                android:paddingLeft="16dp"
+                tools:text="en" />
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/book_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#8598C4"
+            android:maxLines="2"
+            android:textColor="@color/book_list_background"
             android:textSize="14sp"
-            android:maxLines="2" />
-
+            tools:text="Here's what Web designers need to know to create dynamic" />
 
     </LinearLayout>
 
+
     <TextView
-        android:id="@+id/book_date"
+        android:id="@+id/book_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="12sp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1.5"
+        android:gravity="center"
+        android:padding="2dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:textSize="12sp"
+        tools:text="Janet Valade" />
 
 </LinearLayout>
